src/tests/snapshots/learn_chumsky__tests__expr__record_expressions-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
.{ }
---

Some(
    Spanned(
        Record {
            name: None,
            fields: [],
        },
        0..4,
    ),
)

--- Errors ---
[]
---
