src/tests/snapshots/learn_chumsky__tests__expr__recover_block-2.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ (testing; }
---

Some(
    Spanned(
        Block(
            [
                Error,
            ],
        ),
        0..13,
    ),
)

--- Errors ---
[
    ParseError {
        span: 10..11,
        reason: ExpectedFound {
            expected: [
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                Eq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
                CloseParen,
                OpenBrace,
            ],
            found: Some(
                Semi,
            ),
        },
    },
]
---
