src/tests/snapshots/learn_chumsky__tests__expr__recover_block-3.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ {testing; }
---

None

--- Errors ---
[
    ParseError {
        span: 12..13,
        reason: ExpectedFound {
            expected: [
                Semi,
                Module,
            ],
            found: Some(
                CloseBrace,
            ),
        },
    },
]
---
