src/tests/snapshots/learn_chumsky__tests__expr__recover_block-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing ]}
---

Some(
    (
        Block(
            [
                Error,
            ],
        ),
        0..12,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Block,
        ),
        span: 10..11,
        reason: Unclosed {
            span: 0..1,
            delimiter: OpenBrace,
        },
        found: CloseBracket,
        expected: [
            CloseBrace,
        ],
    },
]
---
