src/tests/snapshots/learn_chumsky__tests__expr__recover_block-7.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ testing )
---

Some(
    Spanned(
        Block(
            [
                Error,
            ],
        ),
        0..11,
    ),
)

--- Errors ---
[
    ParseError {
        span: 10..11,
        reason: ExpectedFound {
            expected: [
                Semi,
                Plus,
                Minus,
                Star,
                Slash,
                BangEq,
                Eq,
                EqEq,
                LessThan,
                GreaterThan,
                OpenParen,
                OpenBrace,
            ],
            found: Some(
                CloseParen,
            ),
        },
    },
]
---
