src/tests/snapshots/learn_chumsky__tests__expr__recover_block-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing )
---

None

--- Errors ---
[
    Error {
        label: Some(
            Block,
        ),
        span: 10..11,
        reason: Unexpected,
        found: CloseParen,
        expected: [
            Semi,
            Dot,
            Plus,
            Minus,
            Star,
            Slash,
            Bang,
            BangEq,
            EqEq,
            LessThan,
            GreaterThan,
            Break,
            Const,
            Continue,
            Func,
            If,
            Loop,
            Mut,
            Return,
            OpenParen,
            OpenBrace,
            CloseBrace,
        ],
    },
]
---
