src/tests/snapshots/learn_chumsky__tests__expr__recover_block.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ /&$/&/$ }
---

Some(
    Spanned(
        Block(
            [
                Error,
            ],
        ),
        0..11,
    ),
)

--- Errors ---
[
    ParseError {
        span: 2..3,
        reason: ExpectedFound {
            expected: [
                CloseBrace,
                Module,
            ],
            found: Some(
                Slash,
            ),
        },
    },
]
---
