src/tests/snapshots/learn_chumsky__tests__expr__recover_call-2.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
testing(,)(correct_one, 2)(, aerr, "stuff")
---

Some(
    (
        Call(
            (
                Call(
                    (
                        Call(
                            (
                                Ident("testing"),
                                0..7,
                            ),
                            [
                                (
                                    Error,
                                    7..10,
                                ),
                            ],
                        ),
                        0..10,
                    ),
                    [
                        (
                            Ident("correct_one"),
                            11..22,
                        ),
                        (
                            Int(2),
                            24..25,
                        ),
                    ],
                ),
                0..26,
            ),
            [
                (
                    Error,
                    26..43,
                ),
            ],
        ),
        0..43,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Expression,
        ),
        span: 8..9,
        reason: Unexpected,
        found: Comma,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Continue,
            If,
            Loop,
            Return,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
    Error {
        label: Some(
            Expression,
        ),
        span: 27..28,
        reason: Unexpected,
        found: Comma,
        expected: [
            Dot,
            Minus,
            Bang,
            Break,
            Continue,
            If,
            Loop,
            Return,
            OpenParen,
            CloseParen,
            OpenBrace,
        ],
    },
]
---
