src/tests/snapshots/learn_chumsky__tests__expr__recover_call-5.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
testing(1, {2, 3)
---

Some(
    (
        Call(
            (
                Ident("testing"),
                0..7,
            ),
            [
                (
                    Error,
                    7..17,
                ),
            ],
        ),
        0..17,
    ),
)

--- Errors ---
[
    Error {
        label: Some(
            Block,
        ),
        span: 13..14,
        reason: Unexpected,
        found: Comma,
        expected: [
            Semi,
            Dot,
            Plus,
            Minus,
            Star,
            Slash,
            Bang,
            BangEq,
            EqEq,
            LessThan,
            GreaterThan,
            Break,
            Continue,
            Func,
            If,
            Let,
            Loop,
            Mod,
            Return,
            OpenParen,
            OpenBrace,
            CloseBrace,
        ],
    },
]
---
